gcc/testsuite/rust/rustc/ui/rfc-2632-const-trait-impl/const-trait-bound-opt-out/opt-out-twice.rs
// compile-flags: -Z parse-only

#![feature(const_trait_bound_opt_out)]
#![allow(incomplete_features)]

struct S<T: ?const ?const Tr>;
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }

